@@ -4,6 +4,10 @@
     whatever pkg-config tells us.  Also allow libusb-1.0 + ftdi w/out async
     since it isn't required for things to work.
 
+  * src/svf/svf_flex.l: Have align_string return the length of the string to
+    the caller, and have the callers re-use that.  This avoids useless overhead
+    of calling strlen() over and over.  Fix by Frans Meulenbroeks.
+
 2010-08-26  Mike Frysinger  <vapier@gentoo.org>
 
   * src/tap/cable/gpio.c: Rewrite to use raw file descriptors when working with
